python scripts exit if no response from app within 5 seconds, fixed overflow of settingscontent inputs

--- a/client/src/components/SettingsContent.module.css
+++ b/client/src/components/SettingsContent.module.css
@@ -109,6 +109,11 @@
   padding-left: 5px;
   transition: background-color 0.15s ease;
   font-family: inherit;
+  white-space: nowrap;
+  scrollbar-width: none; /* Firefox */
+}
+.genericInput::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
 }
 .genericInput:hover,
 .genericInput:focus {
